memperbaiki bagan dan halaman keperawatan dan komite, serta merapikan beberapa baris kode

--- a/public/keperawatan.html
+++ b/public/keperawatan.html
@@ -328,15 +328,15 @@
                     collapsable: true,
                     HTMLclass: 'node'
                 },
-                animation: {
-                    nodeAnimation: "easeOutBounce",
-                    nodeSpeed: 700,
-                    connectorsAnimation: "bounce",
-                    connectorsSpeed: 700
-                },
-                levelSeparation: 50, // jarak antar level
-                siblingSeparation: 30, // jarak antar sibling
-                subTeeSeparation: 50  // jarak antar subtree
+                // animation: {
+                //     nodeAnimation: "easeOutBounce",
+                //     nodeSpeed: 700,
+                //     connectorsAnimation: "bounce",
+                //     connectorsSpeed: 700
+                // },
+                levelSeparation: 50,
+                siblingSeparation: 30,
+                subTeeSeparation: 50
             },
 
 
