--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -38,7 +38,7 @@
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
-                    <div class="col-md-8 col-lg-6 col-xl-5">
+                    <div style="max-width: 80%;">
                         <h2 style="color: #767676;">Selamat Datang, <span id="username" style="color: #3b9ac5;">Loading...</span></h2>
                         <h3 style="color: #767676;">Sebagai <span id="role">Loading...</span></h3>
                     </div>
